# simple-a2a-agent

./: .envrc  .gitignore  README.md  devenv.nix  devenv.yaml  pyproject.toml  pyrightconfig.json  treefmt.toml
.github/workflows/: nix-cache.yml
src/simple_a2a_agent/: __init__.py  __main__.py  a2a_client.py  agent.py  autonomy.py  executor.py  model_config.py
tests/: test_a2a_client.py  test_agent.py  test_autonomy.py  test_executor.py  test_main.py  test_model_config.py
